# ai-disrupted-companies

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  companies.csv  company_data.py  daily_research.py  evidence-audit-2026-07-20.md  failed-candidates.md  generate_og_image.py  generate_page.py  leads.md  pyproject.toml  requirements.txt  search-strategies.md  template.html  test_daily_research.py  test_generate_og_image.py  test_generate_page.py  test_update_prices.py  test_validate_csv.py  update_prices.py  validate_csv.py
.claude/hooks/: session-start.sh
.codex/: hooks.json
.codex/hooks/: session-start.sh
.github/workflows/: update-and-generate.yml
cards/: CLAUDE.md  generate_card.py
docs/: index.html
reports/: 2026-03-16_AI-Disruption-Revenue-Report.docx  2026-03-16_AI-Disruption-Revenue-Report.html  revenue-comparison-20260301.csv
src/ai_disruption_index/: __init__.py  company_data.py  daily_research.py  generate_og_image.py  generate_page.py  update_prices.py  validate_csv.py
tests/: test_daily_research.py  test_generate_og_image.py  test_generate_page.py  test_update_prices.py  test_validate_csv.py
