[project]
name = "ai-disrupted-companies"
version = "0.1.0"
description = "Track publicly traded companies disrupted by AI"
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "Pillow",
]

[project.scripts]
ai-index-daily-brief = "ai_disruption_index.daily_research:main"
ai-index-generate-page = "ai_disruption_index.generate_page:main"
ai-index-update-prices = "ai_disruption_index.update_prices:main"
ai-index-validate = "ai_disruption_index.validate_csv:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_disruption_index"]
